# Versor-Isotropic-Sequence-Modeling-via-Conformal-Manifolds-and-Recursive-Isometries

./: CODE_DOCUMENTATION.md  README.md  VN README.md  bench_gapu.py  bench_permanence.py  bench_spatial.py  chat.py  demo_intelligence.py  demo_training_phase_1.py  diag_cga.py  implementation_plan.md  kernel.py  run_all_experiments.py  run_hybrid.py  run_multimodal_experiments.py  test_hybrid_components.py  test_integration.py  test_poc.py  train_hybrid.py  train_phase_1.py  train_phase_2.py
Aethelgard-X/: Cargo.toml  README.md  engine.rs  main.rs
DyckN/: benchmark_cuda.py  benchmark_cuda_scratch.py  dyck_rotor.py  sweep.py  sweep_maxpool.py
Geo_Llama/: cga.py  chat.py  hybrid.py  layers.py  logic_gate.py  logic_gates.py  loss.py  multimodal.py  pyproject.toml  start_demo.sh  test_mock.py  visualizer.py
Geo_Llama/core/: gca_pytorch.py  model.py  patch.py  sync.py
Ising model/geo_transformer/: model.py
Ising model/ising/: data_gen.py
Ising model/tests/: Ising.ipynb  benchmark.py  (+2 more)
Maze/: benchmark_cuda.py  benchmark_cuda_scratch.py  sweep.py  sweep_maxpool.py
Model/: __init__.py  core.py  layers.py  model.py
Paper/: main.tex
Physics/: hidden_velocity_benchmark.py  models.py  multi_channel_evolution.py  multi_channel_v_single.py  recreate_ood.py  rigorous_ablation.py  run_gatr.py  run_mamba_nbody.py  run_multi_seed.py  sweep_gatr_params.py  test_gatr_generalization.py  test_gatr_generalization_v2.py  train.py  update_paper_table.py  verify_params.py
environment/: requirements.txt
results/: ablation_stats.json  multi_channel_v_single_log.json
(+5 files in other folders)
