[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geo_llama_core"
version = "0.1.0"
description = "Rust acceleration for Geo-Llama hybrid model"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "geo_llama_core"
